--- a/rest-spring-front/pom.xml
+++ b/rest-spring-front/pom.xml
@@ -36,11 +36,11 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>com.learningjava.rest.spring</groupId>
             <artifactId>rest-spring-core</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
     <build>
         <plugins>
